[package]
name = "preview-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
random_word = { version = "0.4.1", features = ["en"] }
axum = { version = "0.6", features = ["headers", "multipart"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
